@@ -168,6 +168,24 @@ tree_colon_expression::eval_error (const std::string& s)
 	   line (), column ());
 }
 
+int
+tree_colon_expression::line (void) const
+{
+  return (op_base ? op_base->line ()
+	  : (op_inc ? op_inc->line ()
+	     : (op_limit ? op_limit->line ()
+		: -1)));
+}
+
+int
+tree_colon_expression::column (void) const
+{
+  return (op_base ? op_base->column ()
+	  : (op_inc ? op_inc->column ()
+	     : (op_limit ? op_limit->column ()
+		: -1)));
+}
+
 void
 tree_colon_expression::accept (tree_walker& tw)
 {
